<resources>
    <string name="app_name">Balance</string>

    <!-- Homepage Strings -->
    <string name="hpTxtSaludo">Hola,</string>
    <string name="hpTxtNombre">Nombre usuario</string>
    <string name="hpTxtTitulo">Mis tareas</string>
    <string name="hpEdtxtBuscarTarea">Buscar...</string>
    <string name="hpBtnNuevaTarea">Nueva Tarea</string>
    <string name="hpTxtSinTareasTitulo">¡ Tienes el día libre !</string>
    <string name="hpTxtSinTareasMensaje1">En este momento no tienes </string>
    <string name="hpTxtSinTareasMensaje2">ninguna tarea.</string>

    <!-- Create Task Strings -->
    <string name="ctTxtTitulo">Nueva Tarea</string>
    <string name="ctEmoji">Emoji</string>
    <string name="ctTxtDuracion">Duración pomodoro</string>
    <string name="ctTxtCantidad">Cantidad</string>
    <string name="ctTxtAsignarDuracion">Asignar Duración</string>
    <string name="ctTxtAsignarCantidad">Asignar Cantidad</string>
    <string name="ctTxtAsignarEmoji">Emoji</string>
    <string name="ctBtnCancelar">Cancelar</string>
    <string name="ctBtnAceptar">Aceptar</string>
    <string name="ctBtnFinalizar">Finalizar</string>

    <!-- Ongoing Task Strings -->
    <string name="otTxtTitulo">Tarea en curso</string>
    <string name="otTxtDuracion">Duración pomodoro</string>
    <string name="otTxtCantidad">Cantidad</string>
    <string name="otBtnTerminar">Terminar</string>
    <string name="otBtnInterrupcion">Interrupción</string>
    <string name="otBtnSalir">Salir</string>

    <!-- Task Break Strings -->
    <string name="tbTxtTitleSuggestion">Pausa corta</string>

    <!-- Wellcome Strings -->
    <string name="wTxtTitulo">Bienvenido a Balance</string>
    <string name="wBtnInicioSesion">Iniciar Sesión</string>
    <string name="wBtnRegistrarse">Registrarse</string>

    <!-- Login Strings -->
    <string name="lgTxtTitle">Bienvenido</string>
    <string name="lgTxtSubtitle">Inicia sesión para continuar</string>
    <string name="lgHintCorreo">Correo electrónico</string>
    <string name="lgHintContra">Contraseña</string>
    <string name="lgTxtOlvideContra">Olvidé mi contraseña</string>
    <string name="lgBtnIniciarSesion">Iniciar sesión</string>
    <string name="lgBtnGoogle">Continuar con Google</string>
    <string name="lgTxtSeleccionarInicio">¿Necesitas una cuenta?</string>
    <string name="lgTxtIrARegistro">Registrate aqui</string>

    <!-- Register Strings -->
    <string name="rgTxtTitle">Registrate</string>
    <string name="rgTxtSubtitle">Y comienza a usar Balance</string>
    <string name="rgHintCorreo">Correo electrónico</string>
    <string name="rgHintNombre">Nombre</string>
    <string name="rgHintContra">Contraseña</string>
    <string name="rgHintConfirmarContra">Confirmar Contraseña</string>
    <string name="rgBtnCrearCuenta">Crear Cuenta</string>
    <string name="rgBtnGoogle">Continuar con Google</string>
    <string name="rgTxtSeleccionarInicio">O sino puedes</string>

    <!-- Task Details -->
    <string name="tdTxtTitulo">Tarea</string>
    <string name="tdTxtDuracion">Duración pomodoro</string>
    <string name="tdTxtCantidad">Cantidad</string>
    <string name="tdTxtInterrupciones">Interrupciones</string>
    <string name="tdBtnEliminar">Eliminar</string>

    <!-- User Profile -->
    <string name="upTxtTareasCompletadas">Tareas completadas</string>
    <string name="upTxtTareasFallidas">Tareas fallidas</string>
    <string name="upTxtTareasPendientes">Tareas pendientes</string>
    <string name="upTxtEmojiFavorito">Ultimo Emoji utilizado</string>



    <!-- Custom Dialog Strings -->
    <string name="cdHomepageStartTaskTitle">¿Desea iniciar la tarea?</string>
    <string name="cdHomepageRemoveTaskTitle">¿Desea archivar la tarea?</string>
    <string name="cdHomepageRemoveTaskSubtitle">Una vez archivada la tarea no la podrá observar en la lista</string>
    <string name="cdHomepageConfirmar">Si</string>
    <string name="cdHomepageCancelar">No</string>
    <string name="cdOngoingTaskReturnTitle">¿Desea abandonar la tarea actual?</string>
    <string name="cdOngoingTaskReturnSubtitle">Si abandona la tarea será tomada como fallida</string>
    <string name="cdOngoingTaskFinishTitle">¿Desea terminar la tarea actual?</string>
    <string name="cdOngoingTaskFinishSubtitle">Si termina la tarea será tomada como fallida</string>
    <string name="cdOngoingTaskConfirmar">Si</string>
    <string name="cdOngoingTaskCancelar">No</string>
    <string name="cdOngoingTaskInterruptionTitle">¿Qué sucede?</string>
    <string name="cdOngoingTaskInterruptionHint">Digita tu interrupción</string>
    <string name="cdOngoingTaskInterruptionRegistrar">Registrar</string>




</resources>